// SPDX-License-Identifier: MIT
pragma solidity ^0.8.0;

// Import the library 'Roles'
import "./Roles.sol";

// Define a contract 'RetailerRole' to manage this role - add, remove, check
contract RetailerRole {
    // Define 2 events, one for Adding, and other for Removing

    // Define a struct 'retailers' by inheriting from 'Roles' library, struct Role

    // In the constructor make the address that deploys this contract the 1st retailer
    constructor() {}

    // Define a modifier that checks to see if msg.sender has the appropriate role
    modifier onlyRetailer() {
        _;
    }

    // Define a function 'isRetailer' to check this role
    function isRetailer(address account) public view returns (bool) {}

    // Define a function 'addRetailer' that adds this role
    function addRetailer(address account) public onlyRetailer {}

    // Define a function 'renounceRetailer' to renounce this role
    function renounceRetailer() public {}

    // Define an internal function '_addRetailer' to add this role, called by 'addRetailer'
    function _addRetailer(address account) internal {}

    // Define an internal function '_removeRetailer' to remove this role, called by 'removeRetailer'
    function _removeRetailer(address account) internal {}
}
